syntax = "proto3";

option go_package = '.;proto';

message PageInfo {
    uint32 pn = 1;
    uint32 pSize = 2;
}

message UserInfoResponse {
    int32 id = 1;
    string passWord = 2;
    string mobile = 3;
    string nickname = 4;
    uint64 birthDay = 5;
    string gender = 6;
    int32 role = 7;
}

message UserListResponse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}

message MobileRequest {
    string mobile = 1;
}

message IdRequest {
    int32 id = 1;
}

message CreateUserInfo {
    string nickName = 1;
    string passWord = 2;
    string mobile = 3;
}

message UpdateUserInfo {
    int32 Id = 1;
    string nickName = 2;
    string gender = 3;
    string birthDay = 4;
}

message PasswordCheckInfo {
    string password = 1;
    string encryptedPassword = 2;
}

message CheckResponse {
    bool success = 1;
}

message UpdateUserResponse {
  bool success = 1;
}


service User {
    rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); // 通过mobile查询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse); // 通过id查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 注册用户
    rpc UpdateUser(UpdateUserInfo) returns (UpdateUserResponse); // 更新用户信息
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); // 检查密码
}

// 在当前路径下执行 protoc -I . --go_out=plugins=grpc:. user.proto